chore: udpate usermetadata for swagger
